--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to get </h1>
+            <h1>How to get past writers block</h1>
 
             <hr>
             <p><b>Assembly time:</b> 30 minutes - hours and hours<br>
               <b>Awesome rating:</b> 100% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>Having throuble getting through a bad bit of writers block? Here are some tips on how to get through it!</p>
 
           </div>
 
