--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
+              <li>What you use to write (laptop, phone, paper and pen, etc)</li>
+              <li>Coffee or Tea</li>
+              <li>An outdoor area</li>
               <li>Cork (vintage wines)</li>
               <li>Duct Tape</li>
               <li>Water</li>
@@ -415,7 +415,7 @@ Customise the visual style and appearance of your guide.
 
       /* Styles for sub-list item numbering */
       .step-by-step li li:before {
-        background: #333; 
+        background: #93BDF5; 
       }
 
 
