--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Cut out any distractions to stay focused.</h3>
+              <p>Turn your phone on silent and keep it in your pocket, backpack, or an entirely different room. Close your windows if there are any distracting noises coming in from outside, take your writing tools or laptop to a quiet area, and stay off of social media to focus on what you’re doing.</p> 
             </div>
           </li>
 
