--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://www.flickr.com/photos/195537327@N08/shares/59J61Q" width="100" align="right" height="100" alt="KH_monogram">            
       <h1>Natalie Katsaros's Tips On Overcoming Writers Block</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
@@ -124,8 +124,8 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3>Writing in a different location to give yourself a change of scenery.</h3>
+              <p>If you normally write in your office, try heading to a local coffee shop or park. If you normally write at a coffee shop or park, try writing at home. Switch up your scenery to put yourself in a new headspace. For some people, getting out of a routine by changing their setting is deeply helpful when it comes to getting in the mood to write.</p>
 
               <!--
 This block contains a photo and has a caption.
