--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://www.flickr.com/photos/195537327@N08/shares/59J61Q" width="100" align="right" height="100" alt="KH_monogram">            
+      <img src="https://www.flickr.com/photos/195537327@N08/shares/r520FA" width="100" align="right" height="100" alt="NK_monogram">            
       <h1>Natalie Katsaros's Tips On Overcoming Writers Block</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
@@ -124,7 +124,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Writing in a different location to give yourself a change of scenery.</h3>
+              <h3>Write in a different location to give yourself a change of scenery.</h3>
               <p>If you normally write in your office, try heading to a local coffee shop or park. If you normally write at a coffee shop or park, try writing at home. Switch up your scenery to put yourself in a new headspace. For some people, getting out of a routine by changing their setting is deeply helpful when it comes to getting in the mood to write.</p>
 
               <!--
@@ -140,8 +140,8 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3>Grab a cup of coffee or tea to get in the mood to write.</h3>
+              <p>Brewing a cup of coffee or tea is a great way to start on a positive note. Either make or buy yourself a cup and sit down with your warm drink to get ready to write. A small boost of caffeine is a great way to get your mind focused and put you in the mood for some composition.</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -152,8 +152,9 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h2>And once you've done that, get yourself into a routine! Some ways to do that are...</h2>
+              <h3>Carry a notebook and jot your ideas down as they come to you.</h3>
+              <p>Get a small, pocket-sized notebook and carry it with you wherever you go. Whenever you get an idea, think of a neat sentence or image, or come across a word that really intrigues you, open your notebook and write it down. You can also use this notebook to map stories out or develop character ideas. When it comes time to write, you’ll have a plethora of notes and ideas to draw from.</p> 
             </div>
           </li>
 
