--- a/index.html
+++ b/index.html
@@ -98,9 +98,7 @@ Add your Things You'll Need.
               <li>What you use to write (laptop, phone, paper and pen, etc)</li>
               <li>Coffee or Tea</li>
               <li>An outdoor area</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>Patience</li>
             </ul>
           </aside>
         </div>
@@ -133,7 +131,7 @@ We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
               <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <p class="caption">Truckee River Walk in Reno, Nevada</p>
             </div>
           </li>
 
@@ -153,16 +151,16 @@ with a paragraph to create a photo with a caption.
           <li>
             <div class="content">
               <h2>And once you've done that, get yourself into a routine! Some ways to do that are...</h2>
-              <h3>Carry a notebook and jot your ideas down as they come to you.</h3>
-              <p>Get a small, pocket-sized notebook and carry it with you wherever you go. Whenever you get an idea, think of a neat sentence or image, or come across a word that really intrigues you, open your notebook and write it down. You can also use this notebook to map stories out or develop character ideas. When it comes time to write, you’ll have a plethora of notes and ideas to draw from.</p> 
+              <h3>Spend at least 30 minutes writing every day to make it a habit</h3>
+              <p>You’ll discover that it’s a lot harder to get stuck when you’re writing if you do it every day. Like anything else, writing gets easier with practice. Set a goal for yourself to write for at least 30 minutes every day to get into the habit of putting words on the page.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Write at the same time every day, even if you’re unmotivated.</h3>
+              <p>Writing at the same time every day makes it easier to get into the headspace to write. If you know you’re going to write at 8:00 PM every day, you’ll be subconsciously prepared when it comes time to sit down and do it. This may be hard to do at first, but just force yourself to do it. If you stick with it, it’ll eventually become easier to get your thoughts down on paper.</p> 
             </div>
           </li>
 
