--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#93BDF5;         /* CHANGE THE LINK COLOR HERE */
+        color:#93BDF5;         /*#93BDF5*/
         font-weight:bold;
       }
 
@@ -257,7 +257,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:Arial, sans-serif;          /*#93BDF5*/
       }
 
       h2, h3, h4 {
