--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#A1D0EB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#F59C62;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -277,8 +277,8 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #333;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
-        border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
+        background-color: #E4EFFD;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        border: 1px solid #F8B589;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
         position:relative;
@@ -300,11 +300,11 @@ Customise the visual style and appearance of your guide.
       }
 
       .content {
-        background: #fff;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
+        background: #AECEF8;          /* CHANGE THE INSTRUCTION BACKGROUND COLOR HERE */
       }
 
       .step-by-step li:before {
-        background: #D3E3E8;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
+        background: #C9DEFA;          /* CHANGE THE INSTRUCTION NUMBER BACKGROUND COLOR HERE */
         border-top-left-radius: 50px;          /* CHANGE THE INSTRUCTION SHAPE HERE */
         border-bottom-left-radius: 50px;
       }
