--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://www.flickr.com/photos/195537327@N08/shares/r520FA" width="100" align="right" height="100" alt="NK_monogram">            
+      <img src="https://flic.kr/p/2ngfgbD" width="100" align="right" height="100" alt="NK_monogram">            
       <h1>Natalie Katsaros's Tips On Overcoming Writers Block</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
@@ -130,7 +130,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="River Walk, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a href="https://flic.kr/p/2ngkKQ3" title="River Walk, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
               <p class="caption">Truckee River Walk in Reno, Nevada</p>
             </div>
           </li>
@@ -142,7 +142,7 @@ with a paragraph to create a photo with a caption.
               <p>Brewing a cup of coffee or tea is a great way to start on a positive note. Either make or buy yourself a cup and sit down with your warm drink to get ready to write. A small boost of caffeine is a great way to get your mind focused and put you in the mood for some composition.</p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://youtu.be/OrcHQ6GGVaA" frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
@@ -180,8 +180,8 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>The original how-to appeared in <a href="https://www.wikihow.com/Get-Rid-of-Writer%27s-Block" title="How to Get Rid of Writer's Block - wikiHow">WikiHow</a>.</p>
+      <p>Images are by <a href="https://flic.kr/ps/3YMNmo" title="Natalie Katsaros, on Flickr">Natalie Katsaros from Flickr</a></p>
     </footer>
 
     <!--
