--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@ Customise the visual style and appearance of your guide.
       }
       footer p {
         font-size:12px;
-        color:#000;
+        color:#FACEB1;
       }
 
       a img {
