--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://flic.kr/p/2ngkKQ3" title="River Walk, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
+              <a href="https://flic.kr/p/2ngkKQ3" title="River Walk, on Flickr"><img alt="Truckee River Walk" height="%" width="%" src="https://flic.kr/p/2ngkKQ3" ></a>
               <p class="caption">Truckee River Walk in Reno, Nevada</p>
             </div>
           </li>
