--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="https://flic.kr/p/2ngkKQ3" title="River Walk, on Flickr"><img alt="Truckee River Walk" height="%" width="%" src="<a data-flickr-embed="true" href="https://www.flickr.com/photos/195537327@N08/52025786678/in/dateposted-public/" title="when the river is so walk"><img src="https://live.staticflickr.com/65535/52025786678_b556e8f6f6_z.jpg" width="640" height="427" alt="when the river is so walk"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>" ></a>
+              <a title="River Walk, on Flickr"><img alt="Truckee River Walk" height="%" width="%" src="<a data-flickr-embed="true" href="https://www.flickr.com/photos/195537327@N08/52025786678/in/dateposted-public/" title="when the river is so walk"><img src="https://live.staticflickr.com/65535/52025786678_b556e8f6f6_z.jpg" width="640" height="427" alt="when the river is so walk"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>" ></a>
               <p class="caption">Truckee River Walk in Reno, Nevada</p>
             </div>
           </li>
@@ -142,7 +142,7 @@ with a paragraph to create a photo with a caption.
               <p>Brewing a cup of coffee or tea is a great way to start on a positive note. Either make or buy yourself a cup and sit down with your warm drink to get ready to write. A small boost of caffeine is a great way to get your mind focused and put you in the mood for some composition.</p>
 
 
-              <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/OrcHQ6GGVaA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/OrcHQ6GGVaA" title="YouTube video player" frameborder="0" allow=" "allowfullscreen></iframe>" "frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
