--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="https://flic.kr/p/2ngfgbD" width="100" align="right" height="100" alt="NK_monogram">            
+      <img src="<a data-flickr-embed="true" href="https://www.flickr.com/photos/195537327@N08/52024714757/in/dateposted-public/" title="when the n is so k"><img src="https://live.staticflickr.com/65535/52024714757_b37ff422c9_z.jpg" width="640" height="489" alt="when the n is so k"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>" width="100" align="right" height="100" alt="NK_monogram">            
       <h1>Natalie Katsaros's Tips On Overcoming Writers Block</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
