--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ Replace the header contents:
 -->
 
     <header>          
-      <img src="<a data-flickr-embed="true" href="https://www.flickr.com/photos/195537327@N08/52024714757/in/dateposted-public/" title="when the n is so k"><img src="https://live.staticflickr.com/65535/52024714757_b37ff422c9_z.jpg" width="640" height="489" alt="when the n is so k"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>" width="100" align="right" height="100" alt="NK_monogram">            
+      <img src="<a data-flickr-embed="true" href="https://www.flickr.com/photos/195537327@N08/52024714757/in/dateposted-public/"<img src="https://live.staticflickr.com/65535/52024714757_b37ff422c9_z.jpg" width="100" align="right" height="100" alt="when the n is so k"></a><script async src="//embedr.flickr.com/assets/client-code.js" charset="utf-8"></script>" alt="NK_monogram">            
       <h1>Natalie Katsaros's Tips On Overcoming Writers Block</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
@@ -142,7 +142,7 @@ with a paragraph to create a photo with a caption.
               <p>Brewing a cup of coffee or tea is a great way to start on a positive note. Either make or buy yourself a cup and sit down with your warm drink to get ready to write. A small boost of caffeine is a great way to get your mind focused and put you in the mood for some composition.</p>
 
 
-              <iframe width="560" height="315" src="<iframe width="560" height="315" src="https://www.youtube.com/embed/OrcHQ6GGVaA" title="YouTube video player" frameborder="0" allow=" "allowfullscreen></iframe>" "frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/OrcHQ6GGVaA"560" height="315" title="YouTube video player" frameborder="0" allow=" "allowfullscreen></iframe>" "frameborder="0" allowfullscreen></iframe>
             </div>
 
           </li>
